[fix] (ABC-617): Fix footer action overflow

--- a/src/modules/base/kanban/kanban.css
+++ b/src/modules/base/kanban/kanban.css
@@ -35,7 +35,6 @@
 
 .avonni-kanban__variant_base .avonni-kanban__tiles_container {
     height: 100%;
-    transition: height 0.3s ease-out;
 }
 
 .avonni-kanban__header_action {
